Added simple nav

--- a/index.html
+++ b/index.html
@@ -3,17 +3,20 @@
    <html>
     <head>
         <title>Home</title>
+        <link rel="stylesheet" type="text/css" href="style/style.css">
+        <meta charset="UTF-8">
     </head>
         <body>
             <header>
-                <img src="Images/mustang.jpg" width="100%" />
+                <img src="images/mustang.jpg" width="100%" />
+                
                 <nav>
                 <ul>
-                    <li><a href="#">Nachalo</a></li>
-                    <li><a href="#">Snimki</a></li>
-                    <li><a href="#">Video</a></li>
-                    <li><a href="#">Audio</a></li>
-                    <li><a href="#">Vicove</a></li>
+                    <li><a href="#">Начало</a></li>
+                    <li><a href="#">Снимки</a></li>
+                    <li><a href="#">Видео</a></li>
+                    <li><a href="#">Аудио</a></li>
+                    <li><a href="#">Вицове</a></li>
                 </ul>
             </nav>
             </header>
