--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
         <body>
             <header>
-                <img src="images/mustang.jpg" width="100%" />
+                <img src="images/header.jpg" width="100%" />
                 
                 <nav>
                 <ul>
