--- a/index.html
+++ b/index.html
@@ -8,16 +8,31 @@
     </head>
         <body>
             <header>
-                <img src="images/header.jpg" width="100%" />
+                <img src="images/header.png" width="100%" />
                 
                 <nav>
-                <ul>
-                    <li><a href="#">Начало</a></li>
-                    <li><a href="#">Снимки</a></li>
-                    <li><a href="#">Видео</a></li>
-                    <li><a href="#">Аудио</a></li>
-                    <li><a href="#">Вицове</a></li>
-                </ul>
+                <div class="navigation">
+  		<ul class="nav">
+  			<li>
+  				<a href="#">Home</a>
+  			</li>
+  			<li>
+  				<a href="#">Pictures</a>
+  			</li>
+  			<li>
+  				<a href="#">Video</a>
+  			</li>
+ 		    <li>
+  				<a href="#">Audio</a>
+  			</li>
+ 		    <li>
+  				<a href="#">Jokes</a>
+  			</li>
+ 		    <li>
+  				<a href="#">About Us</a>
+  			</li>
+  		    </ul>
+  	            </div>
             </nav>
             </header>
         </body>	
