--- a/index.html
+++ b/index.html
@@ -11,28 +11,26 @@
                 <img src="images/header.png" width="100%" />
                 
                 <nav>
-                <div class="navigation">
-  		<ul class="nav">
-  			<li>
-  				<a href="#">Home</a>
-  			</li>
-  			<li>
-  				<a href="#">Pictures</a>
-  			</li>
-  			<li>
-  				<a href="#">Video</a>
-  			</li>
- 		    <li>
-  				<a href="#">Audio</a>
-  			</li>
- 		    <li>
-  				<a href="#">Jokes</a>
-  			</li>
- 		    <li>
-  				<a href="#">About Us</a>
-  			</li>
-  		    </ul>
-  	            </div>
+              		<ul id="navigation">
+              			<li>
+              				<a href="#">Home</a>
+              			</li>
+              			<li>
+              				<a href="#">Pictures</a>
+              			</li>
+              			<li>
+              				<a href="#">Video</a>
+              			</li>
+             		    <li>
+              				<a href="#">Audio</a>
+              			</li>
+             		    <li>
+              				<a href="#">Jokes</a>
+              			</li>
+             		    <li>
+              				<a href="#">About Us</a>
+              			</li>
+              		</ul>
             </nav>
             </header>
         </body>	
