--- a/index.html
+++ b/index.html
@@ -1,37 +1,55 @@
-
 <!DOCTYPE html>
-   <html>
+<html>
     <head>
-        <title>Home</title>
-        <link rel="stylesheet" type="text/css" href="style/style.css">
         <meta charset="UTF-8">
+        <title>Home</title>
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
+        <script type="text/javascript" src="js/bootstrap.min.js"></script>
     </head>
-        <body>
-            <header>
-                <img src="images/header.png" width="100%" />
-                
-                <nav>
-              		<ul id="navigation">
-              			<li>
-              				<a href="#">Home</a>
-              			</li>
-              			<li>
-              				<a href="#">Pictures</a>
-              			</li>
-              			<li>
-              				<a href="#">Video</a>
-              			</li>
-             		    <li>
-              				<a href="#">Audio</a>
-              			</li>
-             		    <li>
-              				<a href="#">Jokes</a>
-              			</li>
-             		    <li>
-              				<a href="#">About Us</a>
-              			</li>
-              		</ul>
+    <body>
+        <header>
+            <img src="images/header.png" width="100%" />
+            
+            <nav>
+                <div class="container-fluid">
+                    <div class="row">
+                        <ul id="navigation">
+                            <div class="col-sm-4 col-md-2">
+                                <li>
+                                    <a href="#">Home</a>
+                                </li>
+                            </div>
+                            <div class="col-sm-4 col-md-2">
+                                <li>
+                                    <a href="#">Pictures</a>
+                                </li>
+                            </div>
+                            <div class="col-sm-4 col-md-2">
+                                <li>
+                                    <a href="#">Video</a>
+                                </li>
+                            </div>
+                            <div class="col-sm-4 col-md-2">
+                                <li>
+                                    <a href="#">Audio</a>
+                                </li>
+                            </div>
+                            <div class="col-sm-4 col-md-2">
+                                <li>
+                                    <a href="#">Jokes</a>
+                                </li>
+                            </div>
+                            <div class="col-sm-4 col-md-2">
+                                <li>
+                                    <a href="#">About Us</a>
+                                </li>
+                            </div>
+                        </ul>
+                    </div>
+                </div>
             </nav>
-            </header>
-        </body>	
+        </header>
+    </body>
 </html>
