Fixed responsiveness for xs devices

--- a/index.html
+++ b/index.html
@@ -16,32 +16,32 @@
                 <div class="container-fluid">
                     <div class="row">
                         <ul id="navigation">
-                            <div class="col-sm-4 col-md-2">
+                            <div class="col-sm-4 col-md-2 col-xs-6">
                                 <li>
                                     <a href="#">Home</a>
                                 </li>
                             </div>
-                            <div class="col-sm-4 col-md-2">
+                            <div class="col-sm-4 col-md-2 col-xs-6">
                                 <li>
                                     <a href="#">Pictures</a>
                                 </li>
                             </div>
-                            <div class="col-sm-4 col-md-2">
+                            <div class="col-sm-4 col-md-2 col-xs-6">
                                 <li>
                                     <a href="#">Video</a>
                                 </li>
                             </div>
-                            <div class="col-sm-4 col-md-2">
+                            <div class="col-sm-4 col-md-2 col-xs-6">
                                 <li>
                                     <a href="#">Audio</a>
                                 </li>
                             </div>
-                            <div class="col-sm-4 col-md-2">
+                            <div class="col-sm-4 col-md-2 col-xs-6">
                                 <li>
                                     <a href="#">Jokes</a>
                                 </li>
                             </div>
-                            <div class="col-sm-4 col-md-2">
+                            <div class="col-sm-4 col-md-2 col-xs-6">
                                 <li>
                                     <a href="#">About Us</a>
                                 </li>
