--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>
-            <img src="images/header.png" width="100%" />
+            <img src="images/header.png" width="100%" height="100px" />
             
             <nav>
                 <div class="container-fluid">
@@ -51,5 +51,12 @@
                 </div>
             </nav>
         </header>
+        <footer>
+            <div id="foooter">
+                <p class="team">2014-All rights reserved team DEATHWING  &copy;</p>
+                <p class="contact">Contact information: <a href="mailto:someone@example.com">deathwing@gmail.com</a></p>
+            </div>
+        </footer>
+ 
     </body>
 </html>
