--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <footer>
             <div id="foooter">
                 <p class="team">2014-All rights reserved team DEATHWING  &copy;</p>
-                <p class="contact">Contact information: <a href="mailto:someone@example.com">deathwing@gmail.com</a></p>
+                <p class="contact">Contact information: <a href="mailto:deathwing@gmail.com">deathwing@gmail.com</a></p>
             </div>
         </footer>
  
