--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Home</title>
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
-        <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
+        <script type="text/javascript" src="js/jquery-2.1.1.js"></script>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
     </head>
     <body>
@@ -52,7 +52,7 @@
             </nav>
         </header>
         <footer>
-            <div id="foooter">
+            <div id="footer">
                 <p class="team">2014-All rights reserved team DEATHWING  &copy;</p>
                 <p class="contact">Contact information: <a href="mailto:deathwing@gmail.com">deathwing@gmail.com</a></p>
             </div>
