--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>
-            <img src="images/header.png" width="100%" height="100px" />
+            <img src="images/header.png" alt="header imagee" />
             
             <nav>
                 <div class="container-fluid">
