--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     </head>
     <body>
         <header>
-            <img src="images/header.png" width="100%" height="100px" />
-            
+           <div id="header">
+            <img src="images/header.png" />
+            </div>
             <nav>
                 <div class="container-fluid">
                     <div class="row">
@@ -51,6 +52,16 @@
                 </div>
             </nav>
         </header>
+           <section>
+               <h1>Добре дошли</h1>
+               <p>В този сайт ще ви представим униклани снимки, видеота, аудио ремикси и вицове за нашите лектори от Software University</p>
+               <br>
+               <p>Бог създаде идиотите. Интернет ги направи равни.</p>
+               
+           </section>
+           <aside>
+               <p>some textsome textsome textsome text</p>
+           </aside>
         <footer>
             <div id="foooter">
                 <p class="team">2014-All rights reserved team DEATHWING  &copy;</p>
