--- a/index.html
+++ b/index.html
@@ -38,12 +38,19 @@
             </div>
         </nav>
     </header>
+    <section>
+        <h1>Добре дошли</h1>
+        <p>В нашичт сайт ще видите забавни снимки, вицове, видео иа аудио ремикси за нашите лектори.</p>
+        <p>Бог създаде идиотите. Интернет ги направи равни.</p>
+    </section>
+    <aside>
+        
+    </aside>
     <footer>
         <div id="footer">
             <p class="team">2014-All rights reserved team DEATHWING  &copy;</p>
             <p class="contact">Contact information: <a href="mailto:deathwing@gmail.com">deathwing@gmail.com</a></p>
         </div>
     </footer>
-    
 </body>
 </html>
