--- a/index.html
+++ b/index.html
@@ -106,11 +106,12 @@
                         document.write(cal);
                         </script>
                     </aside>
-                    
+                    <div class="container-fluid">
                     <footer>
                         <p class="team">2014-All rights reserved team DEATHWING  &copy;</p>
                         <p class="contact">Contact information: <a href="mailto:deathwing@gmail.com">deathwing@gmail.com</a></p>
                     </footer>
+                    </div>
                 </div>
             </body>
         </html>
