Added links for navitems

--- a/pictures.html
+++ b/pictures.html
@@ -18,10 +18,10 @@
                 <div class="row">
                     <nav>
                         <div class="col-sm-4 col-md-2 col-xs-6 navitem">
-                            <a href="#">Home</a>
+                            <a href="index.html">Home</a>
                         </div>
                         <div class="col-sm-4 col-md-2 col-xs-6 navitem">
-                            <a href="#" class="active">Pictures</a>
+                            <a href="pictures.html" class="active">Pictures</a>
                         </div>
                         <div class="col-sm-4 col-md-2 col-xs-6 navitem">
                             <a href="#">Video</a>
