--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                 <div class="row">
                     <nav>
                         <div class="col-sm-4 col-md-2 col-xs-6 navitem">
-                            <a href="#" class="active">Home</a>
+                            <a href="index.html" class="active">Home</a>
                         </div>
                         <div class="col-sm-4 col-md-2 col-xs-6 navitem">
-                            <a href="#">Pictures</a>
+                            <a href="pictures.html">Pictures</a>
                         </div>
                         <div class="col-sm-4 col-md-2 col-xs-6 navitem">
                             <a href="#">Video</a>
