Validated HTML & CSS

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     </head>
     <body>
         <div id="wrapper">
-            <header>
-                <img src="images/header.png" alt="header image" />
+                <header>
+                    <img src="images/header.png" alt="header image" />
+                    
                 <div class="row">
                     <nav>
                         <div class="col-sm-4 col-md-2 col-xs-6 navitem">
@@ -33,8 +34,8 @@
                         <div class="col-sm-4 col-md-2 col-xs-6 navitem">
                             <a href="#">About Us</a>
                         </div>
-                    </div>
-                </nav>
+                    </nav>
+                </div>
             </header>
             <hr>
             <div class="row">
@@ -49,7 +50,7 @@
                 </main>
                 <div class="col-md-4">
                     <aside>
-                        <script language="javascript" type="text/javascript" src="js/calendar.js"></script>
+                        <script type="text/javascript" src="js/calendar.js"></script>
                     </aside>
                 </div>
             </div>
