--- a/pictures.html
+++ b/pictures.html
@@ -12,9 +12,9 @@
     </head>
     <body>
         <div id="wrapper">
-            <header>
-                <img src="images/header.png" alt="header image" />
-                
+                <header>
+                    <img src="images/header.png" alt="header image" />
+
                 <div class="row">
                     <nav>
                         <div class="col-sm-4 col-md-2 col-xs-6 navitem">
@@ -35,18 +35,19 @@
                         <div class="col-sm-4 col-md-2 col-xs-6 navitem">
                             <a href="#">About Us</a>
                         </div>
-                    </div>
-                </nav>
+                    </nav>
+                </div>
             </header>
             <hr>
             <div class="row">
                 <main>
                 <div class="col-md-8">
                     <section>
+                        <h2>Галерия</h2>
                         <div class="galleria">
-                            <img src="images/photo1.jpg">
-                            <img src="images/photo1.jpg">
-                            <img src="images/photo1.jpg">
+                            <img src="images/photo1.jpg" alt="Nakov igrae kiuchek">
+                            <img src="images/photo1.jpg" alt="Nakov igrae kiuchek">
+                            <img src="images/photo1.jpg" alt="Nakov igrae kiuchek">
                             <script>
                             Galleria.loadTheme('themes/classic/galleria.classic.min.js');
                             Galleria.run('.galleria');
