--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
             </div>
             <div class="row">
                 <footer>
-                    <p class="team">2014-All rights reserved team DEATHWING  &copy;</p>
-                    <p class="contact">Contact information: <a href="mailto:deathwing@gmail.com">deathwing@gmail.com</a></p>
+                    <p class="team">2014-All rights reserved team DEATHWING  &copy;<br>
+                    Contact information: <a href="mailto:deathwing@gmail.com">deathwing@gmail.com</a>
                 </footer>
             </div>
         </div>
