--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
                             <a href="pictures.html">Pictures</a>
                         </div>
                         <div class="col-sm-4 col-md-2 col-xs-6 navitem">
-                            <a href="#">Video</a>
+                            <a href="video.html">Video</a>
                         </div>
                         <div class="col-sm-4 col-md-2 col-xs-6 navitem">
                             <a href="#">Audio</a>
                         </div>
                         <div class="col-sm-4 col-md-2 col-xs-6 navitem">
-                            <a href="#">Jokes</a>
+                            <a href="jokes.html">Jokes</a>
                         </div>
                         <div class="col-sm-4 col-md-2 col-xs-6 navitem">
                             <a href="#">About Us</a>
