--- a/jokes.html
+++ b/jokes.html
@@ -2,26 +2,26 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Pictures</title>
+        <title>Jokes</title>
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="css/slider.css">
         <script type="text/javascript" src="js/jquery-2.1.1.js"></script>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="js/galleria-1.3.6.min.js"></script>
     </head>
     <body>
         <div id="wrapper">
                 <header>
                     <img src="images/header.png" alt="header image" />
-
+                    
                 <div class="row">
                     <nav>
                         <div class="col-sm-4 col-md-2 col-xs-6 navitem">
-                            <a href="index.html">Home</a>
+                            <a href="index.html" >Home</a>
                         </div>
                         <div class="col-sm-4 col-md-2 col-xs-6 navitem">
-                            <a href="pictures.html" class="active">Pictures</a>
+                            <a href="pictures.html">Pictures</a>
                         </div>
                         <div class="col-sm-4 col-md-2 col-xs-6 navitem">
                             <a href="video.html">Video</a>
@@ -30,7 +30,7 @@
                             <a href="#">Audio</a>
                         </div>
                         <div class="col-sm-4 col-md-2 col-xs-6 navitem">
-                            <a href="jokes.html">Jokes</a>
+                            <a href="jokes.html" class="active">Jokes</a>
                         </div>
                         <div class="col-sm-4 col-md-2 col-xs-6 navitem">
                             <a href="#">About Us</a>
@@ -42,17 +42,38 @@
             <div class="row">
                 <main>
                 <div class="col-md-8">
-                    <section>
-                        <h2>Галерия</h2>
-                        <div class="galleria">
-                            <img src="images/photo1.jpg" alt="Nakov igrae kiuchek">
-                            <img src="images/photo1.jpg" alt="Nakov igrae kiuchek">
-                            <img src="images/photo1.jpg" alt="Nakov igrae kiuchek">
-                            <script>
-                            Galleria.loadTheme('themes/classic/galleria.classic.min.js');
-                            Galleria.run('.galleria');
-                            </script>
-                        </div>
+                    <section class="jokes">
+                     <p>- Колко системни програмисти са нужни за да завият крушка?<br>
+- Нито един. Проблемът е хардуерен.</p>   
+                    </section>
+                    <section class="jokes">
+                        <p>
+                    Час по английски. Учителят към детето на НАКОВ:<br>
+                    - Как е на английски гума?<br>
+                    Син на НАКОВ:<br>
+                    - Бекспейс.</p>
+                    </section>
+                    <section class="jokes">
+                        <p>          
+                    Докторът към програмистка:<br>
+                    - Бременна сте!<br>
+                    Тя:<br>
+                    - Не може ли да дадем Und Du?<br>
+                    Той:<br>
+                    - Не! Записано е на хард диска!<br>
+                        </p>
+                    </section>
+                    <section class="jokes">
+                        <p>          
+Иванчо си купил компютър. Решил да си сложи парола и написал penis.<br> Компютърът изписал:<br>
+"Ключът е отхвърлен. Не е достатъчно дълъг''...
+                        </p>
+                    </section>
+                    <section class="jokes">
+                        <p>          
+Програмист се разхожда в планината. Огледал заобикалящата<br> го природа и си казал:<br>
+- Каква яка графика!
+                        </p>
                     </section>
                 </div>
                 </main>
