--- a/video.html
+++ b/video.html
@@ -2,29 +2,32 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Pictures</title>
+        <title>Home</title>
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="css/slider.css">
         <script type="text/javascript" src="js/jquery-2.1.1.js"></script>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="js/galleria-1.3.6.min.js"></script>
+                     
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
+        <script src="js/jquery.flexslider-min.js"></script>
     </head>
     <body>
         <div id="wrapper">
                 <header>
                     <img src="images/header.png" alt="header image" />
-
+                    
                 <div class="row">
                     <nav>
                         <div class="col-sm-4 col-md-2 col-xs-6 navitem">
-                            <a href="index.html">Home</a>
+                            <a href="index.html" >Home</a>
                         </div>
                         <div class="col-sm-4 col-md-2 col-xs-6 navitem">
-                            <a href="pictures.html" class="active">Pictures</a>
+                            <a href="pictures.html">Pictures</a>
                         </div>
                         <div class="col-sm-4 col-md-2 col-xs-6 navitem">
-                            <a href="video.html">Video</a>
+                            <a href="video.html" class="active">Video</a>
                         </div>
                         <div class="col-sm-4 col-md-2 col-xs-6 navitem">
                             <a href="#">Audio</a>
@@ -42,19 +45,18 @@
             <div class="row">
                 <main>
                 <div class="col-md-8">
-                    <section>
-                        <h2>Галерия</h2>
-                        <div class="galleria">
-                            <img src="images/photo1.jpg" alt="Nakov igrae kiuchek">
-                            <img src="images/photo1.jpg" alt="Nakov igrae kiuchek">
-                            <img src="images/photo1.jpg" alt="Nakov igrae kiuchek">
-                            <script>
-                            Galleria.loadTheme('themes/classic/galleria.classic.min.js');
-                            Galleria.run('.galleria');
-                            </script>
-                        </div>
-                    </section>
-                </div>
+                   <section class="youtube-video">
+                       <iframe title="YouTube video player" class="youtube-player" type="text/html" 
+                        width="425" height="349" src="http://www.youtube.com/embed/W-Q7RMpINVo"
+                        frameborder="0" allowFullScreen></iframe>
+                                               <iframe title="YouTube video player" class="youtube-player" type="text/html" 
+                        width="425" height="349" src="http://www.youtube.com/embed/W-Q7RMpINVo"
+                        frameborder="0" allowFullScreen></iframe>
+                                               <iframe title="YouTube video player" class="youtube-player" type="text/html" 
+                        width="425" height="349" src="http://www.youtube.com/embed/W-Q7RMpINVo"
+                        frameborder="0" allowFullScreen></iframe>
+                   </section>
+                    </div>
                 </main>
                 <div class="col-md-4">
                     <aside>
