--- a/pictures.html
+++ b/pictures.html
@@ -46,7 +46,7 @@
                         <h2>Галерия</h2>
                         <div class="galleria">
                             <img src="images/photo1.jpg" alt="Nakov igrae kiuchek">
-                            <img src="images/photo1.jpg" alt="Nakov igrae kiuchek">
+                            <img src="images/funny.jpg" alt="little boy browsing">
                             <img src="images/photo1.jpg" alt="Nakov igrae kiuchek">
                             <script>
                             Galleria.loadTheme('themes/classic/galleria.classic.min.js');
