--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="stylesheet" type="text/css" href="css/slider.css">
+        <link rel='stylesheet' id='BNS-Corner-Logo-Style-css'  href='social_icons_from_Techandallcom.css' type='text/css' media='screen' />
         <script type="text/javascript" src="js/jquery-2.1.1.js"></script>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
                      
@@ -49,6 +50,22 @@
                         <h1>Добре дошли</h1>
                         <p class="sentences">В нашият сайт ще видите забавни снимки, вицове, видео и аудио ремикси за нашите лектори.</p>
                         <p class="sentences">Бог създаде идиотите. Интернет ги направи равни.</p>
+                    <div class="social-icons">
+                      <ul>
+                    <li class="twitter" style="background-color: #f0f0f0">
+                    <a href="https://twitter.com/softunibg" target="_blank">Twitter</a>
+                    </li>
+                    <li class="facebook" style="background-color: #f0f0f0">
+                    <a href="https://www.facebook.com/SoftwareUniversity?fref=ts" target="_blank">Facebook</a>
+                    </li>
+                    <li class="youtube" style="background-color: #f0f0f0">
+                    <a href="http://www.youtube.com/user/softwareuniversity" target="_blank">YouTube</a>
+                    </li>
+                    <li class="linkedin" style="background-color: #f0f0f0">
+                    <a href="http://www.linkedin.com" target="_blank">LinkedIN</a>
+                    </li>
+                    </ul>
+                    </div>
                     </section>
                 </div>
                 </main>
@@ -58,32 +75,13 @@
                     </aside>
                 </div>
             </div>
-        <script>
-            $(document).ready(function () {
-                $('.flexslider').flexslider({
-                    animation: 'fade',
-                    controlsContainer: '.flexslider'
-                });
-            });
-        </script>
-        <div class="slider">
-  <div class="flex-container">
-    <div class="flexslider">
-        <ul class="slides">
-            <li><img src="images/photo1.jpg" height="100%" width="100%" /></li>
-            <li><img src="images/photo1.jpg" height="100%" width="100%" /></li>
-            <li><img src="images/photo1.jpg" height="100%" width="100%" /></li>
-            <li><img src="images/photo1.jpg" height="100%" width="100%" /></li>
-            <li><img src="images/photo1.jpg" height="100%" width="100%" /></li>  
-                </ul>
-            </div>
-            </div>
-            </div>
             <div class="row">
                 <footer>
                     <p class="team">2014-All rights reserved team DEATHWING  &copy;<br>
                     Contact information: <a href="mailto:deathwing@gmail.com">deathwing@gmail.com</a>
                     </p>
+
+                    </div>
                 </footer>
             </div>
         </div>
