fixed jokes and created aboutus

--- a/jokes.html
+++ b/jokes.html
@@ -33,7 +33,7 @@
                             <a href="jokes.html" class="active">Jokes</a>
                         </div>
                         <div class="col-sm-4 col-md-2 col-xs-6 navitem">
-                            <a href="#">About Us</a>
+                            <a href="aboutus.html">About Us</a>
                         </div>
                     </nav>
                 </div>
@@ -41,42 +41,65 @@
             <hr>
             <div class="row">
                 <main>
-                <div class="col-md-8">
-                    <section class="jokes">
-                     <p>- Колко системни програмисти са нужни за да завият крушка?<br>
-- Нито един. Проблемът е хардуерен.</p>   
-                    </section>
-                    <section class="jokes">
-                        <p>
+                <div class="col-md-4">
+                   <section>
+                    <article class="jokes">
+                     - Колко системни програмисти са нужни за да завият крушка?<br>
+- Нито един. Проблемът е хардуерен.  
+                    </article>
+                    <article class="jokes">            
                     Час по английски. Учителят към детето на НАКОВ:<br>
                     - Как е на английски гума?<br>
                     Син на НАКОВ:<br>
                     - Бекспейс.</p>
-                    </section>
-                    <section class="jokes">
-                        <p>          
+                    </article>
+                    <article class="jokes">                    
                     Докторът към програмистка:<br>
                     - Бременна сте!<br>
                     Тя:<br>
                     - Не може ли да дадем Und Du?<br>
                     Той:<br>
                     - Не! Записано е на хард диска!<br>
-                        </p>
+                    </article>
+                    <article class="jokes">
+                    Срещат се двама програмисти:<br>
+                    - Ти какви жени предпочиташ - оригинални, shareware или freeware?<br>
+                    - Все ми е тая, само да нямат time sharing...<br>
+                    </article>
+                    <article class="jokes">
+                        - Как изглежда новият модел клавиатура на Microsoft? <br>
+                        - Има само три бутона - Ctrl, Alt & Del...
+                    </article>
                     </section>
-                    <section class="jokes">
-                        <p>          
-Иванчо си купил компютър. Решил да си сложи парола и написал penis.<br> Компютърът изписал:<br>
-"Ключът е отхвърлен. Не е достатъчно дълъг''...
-                        </p>
-                    </section>
-                    <section class="jokes">
-                        <p>          
-Програмист се разхожда в планината. Огледал заобикалящата<br> го природа и си казал:<br>
-- Каква яка графика!
-                        </p>
-                    </section>
+
                 </div>
                 </main>
+                <div class="col-md-4">
+                   <section>
+                    <article class="jokes">
+                   Компютърът ми ме бие постоянно на шах. <br>
+                   Затова пък аз винаги го бия на бокс!  
+                    </article>
+                    <article class="jokes">            
+
+                    Програмист се налива цяла нощ с ракия. Преди да престане да дава признаци на                                живот, решава да<br> дръпне една биричка. Взима чаша, бутилка и започва нервно да                        си налива. В този момент изпуска<br> чашата и замислено промълвява:<br>
+                    - Мда-а-а... Интересен бъг?!?
+                    </article>
+                    <article class="jokes">                    
+                    Разговор мейду компютърни специалисти:<br>
+                    - Снощи свалих страхотна мадама!<br>
+                    - Колко мегабайта и от къде?<br>
+                    </article>
+                    <article class="jokes">
+                        - Каква е разликата между опитния и начинаещия програмист?<br>
+                        - Начинаещия мисли, че в килобайта има 1000 байта, а опитния мисли, че в километъра                         има 1024 метра!
+                    </article>
+                    <article class="jokes">      
+                Двама програмисти седят на прозореца, единия вижда летяща чиния:<br>
+                - Гледай, гледай! На някой пак му е хвръкнал диска!
+                    </article>
+                    </section>
+                </div>
                 <div class="col-md-4">
                     <aside>
                         <script type="text/javascript" src="js/calendar.js"></script>
