--- a/aboutus.html
+++ b/aboutus.html
@@ -43,44 +43,23 @@
                 </div>
             </header>
             <hr>
-            <div class="row">
-                <main>
-                <div class="col-md-8">
-                    <section>
-                        <h1>Добре дошли</h1>
-                        <p class="sentences">В нашият сайт ще видите забавни снимки, вицове, видео и аудио ремикси за нашите лектори.</p>
-                        <p class="sentences">Бог създаде идиотите. Интернет ги направи равни.</p>
-                    <div class="social-icons">
-                      <ul>
-                    <li class="twitter" style="background-color: #f0f0f0">
-                    <a href="https://twitter.com/softunibg" target="_blank">Twitter</a>
-                    </li>
-                    <li class="facebook" style="background-color: #f0f0f0">
-                    <a href="https://www.facebook.com/SoftwareUniversity?fref=ts" target="_blank">Facebook</a>
-                    </li>
-                    <li class="youtube" style="background-color: #f0f0f0">
-                    <a href="http://www.youtube.com/user/softwareuniversity" target="_blank">YouTube</a>
-                    </li>
-                    <li class="linkedin" style="background-color: #f0f0f0">
-                    <a href="http://www.linkedin.com" target="_blank">LinkedIN</a>
-                    </li>
-                    </ul>
-                    </div>
-                    </section>
+            <div class="col-md-8">
+             <section>
+                 <div>
+                    <p class="text"><img src="http://placekitten.com/g/200/200" height="200px" width="200px" border="1px"></p>
+                    <p>Text Text Text Text Text Text Text <br>Text Text Text Text Text Text Text Text Text Text Text Text</p>
                 </div>
-                </main>
-                <div class="col-md-4">
-                    <aside>
-                        <script type="text/javascript" src="js/calendar.js"></script>
-                    </aside>
-                </div>
-            </div>
+
+             </section>
+             </div>
+             <div class="col-md-4">
+                 
+             </div>
             <div class="row">
                 <footer>
                     <p class="team">2014-All rights reserved team DEATHWING  &copy;<br>
                     Contact information: <a href="mailto:deathwing@gmail.com">deathwing@gmail.com</a>
                     </p>
-
                     </div>
                 </footer>
             </div>
