--- a/video.html
+++ b/video.html
@@ -36,7 +36,7 @@
                             <a href="jokes.html">Jokes</a>
                         </div>
                         <div class="col-sm-4 col-md-2 col-xs-6 navitem">
-                            <a href="#">About Us</a>
+                            <a href="aboutus.html">About Us</a>
                         </div>
                     </nav>
                 </div>
