made aboutus.html, fixed social buttons

--- a/video.html
+++ b/video.html
@@ -10,8 +10,6 @@
         <script type="text/javascript" src="js/jquery-2.1.1.js"></script>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
         
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
-        <script src="js/jquery.flexslider-min.js"></script>
     </head>
     <body>
         <div id="wrapper">
@@ -74,6 +72,18 @@
                 <div class="col-md-4">
                     <aside>
                         <script type="text/javascript" src="js/calendar.js"></script>
+                        
+                        <ul class="social-icons">
+                            <li>
+                                <a title="Twitter" target="_blank" href="https://twitter.com/softunibg"><img alt="Twitter" src="images/twitter.png"></a>
+                            </li>
+                            <li>
+                                <a title="Facebook" target="_blank" href="https://www.facebook.com/SoftwareUniversity"><img alt="Facebook" src="images/facebook.png"></a>
+                            </li>
+                            <li>
+                                <a title="Google Plus" target="_blank" href="https://plus.google.com/+SoftuniBg"><img alt="Google Plus" src="images/googleplus.png"></a>
+                            </li>
+                        </ul>
                     </aside>
                 </div>
             </div>
