--- a/jokes.html
+++ b/jokes.html
@@ -70,12 +70,10 @@
                         - Как изглежда новият модел клавиатура на Microsoft? <br>
                         - Има само три бутона - Ctrl, Alt & Del...
                     </article>
-                    </section>
 
                 </div>
                 </main>
                 <div class="col-md-4">
-                   <section>
                     <article class="jokes">
                    Компютърът ми ме бие постоянно на шах. <br>
                    Затова пък аз винаги го бия на бокс!  
@@ -103,6 +101,18 @@
                 <div class="col-md-4">
                     <aside>
                         <script type="text/javascript" src="js/calendar.js"></script>
+                        
+                        <ul class="social-icons">
+                            <li>
+                                <a title="Twitter" target="_blank" href="https://twitter.com/softunibg"><img alt="Twitter" src="images/twitter.png"></a>
+                            </li>
+                            <li>
+                                <a title="Facebook" target="_blank" href="https://www.facebook.com/SoftwareUniversity"><img alt="Facebook" src="images/facebook.png"></a>
+                            </li>
+                            <li>
+                                <a title="Google Plus" target="_blank" href="https://plus.google.com/+SoftuniBg"><img alt="Google Plus" src="images/googleplus.png"></a>
+                            </li>
+                        </ul>
                     </aside>
                 </div>
             </div>
