--- a/pictures.html
+++ b/pictures.html
@@ -59,6 +59,18 @@
                 <div class="col-md-4">
                     <aside>
                         <script type="text/javascript" src="js/calendar.js"></script>
+                        
+                        <ul class="social-icons">
+                            <li>
+                                <a title="Twitter" target="_blank" href="https://twitter.com/softunibg"><img alt="Twitter" src="images/twitter.png"></a>
+                            </li>
+                            <li>
+                                <a title="Facebook" target="_blank" href="https://www.facebook.com/SoftwareUniversity"><img alt="Facebook" src="images/facebook.png"></a>
+                            </li>
+                            <li>
+                                <a title="Google Plus" target="_blank" href="https://plus.google.com/+SoftuniBg"><img alt="Google Plus" src="images/googleplus.png"></a>
+                            </li>
+                        </ul>
                     </aside>
                 </div>
             </div>
