--- a/jokes.html
+++ b/jokes.html
@@ -103,13 +103,13 @@
                         <script type="text/javascript" src="js/calendar.js"></script>
                         
                         <ul class="social-icons">
-                            <li>
+                            <li class="twitter">
                                 <a title="Twitter" target="_blank" href="https://twitter.com/softunibg"><img alt="Twitter" src="images/twitter.png"></a>
                             </li>
-                            <li>
+                            <li class="fb">
                                 <a title="Facebook" target="_blank" href="https://www.facebook.com/SoftwareUniversity"><img alt="Facebook" src="images/facebook.png"></a>
                             </li>
-                            <li>
+                            <li class="googleplus">
                                 <a title="Google Plus" target="_blank" href="https://plus.google.com/+SoftuniBg"><img alt="Google Plus" src="images/googleplus.png"></a>
                             </li>
                         </ul>
