about us luboslav

--- a/aboutus.html
+++ b/aboutus.html
@@ -44,8 +44,8 @@
                 <div class="col-md-8">
                     <section id="users">
                         <dl>
-                        <dt><img src="http://placekitten.com/g/200/200">Ivelin Kirilov</dt>
-                        <dd>ipsum dolor sit amet, consectetur adipisicing elit. Repellendus facere quaerat, corrupti enim. Eveniet, itaque! Et qui aspernatur veritatis consequatur!</dd>
+                        <dt><img src="images/lubo.jpg" width="200px" weight="200px">Любослав Пирсафов</dt>
+                        <dd>Здравейте. Занимавам се с програмиране от около 2 години и реших да уча в Software University,  и съм много доволен от това.Родом съм от Крумовград, но сега живея в София.В свободното си време обичам да играя футбол!</dd>
                          <dt><img src="http://placekitten.com/g/200/200">Ivelin Kirilov</dt>
                         <dd>ipsum dolor sit amet, consectetur adipisicing elit. Repellendus facere quaerat, corrupti enim. Eveniet, itaque! Et qui aspernatur veritatis consequatur!</dd>
                          <dt><img src="http://placekitten.com/g/200/200">Ivelin Kirilov</dt>
