--- a/pictures.html
+++ b/pictures.html
@@ -47,7 +47,7 @@
                         <div class="galleria">
                             <img src="images/photo1.jpg" alt="Nakov igrae kiuchek">
                             <img src="images/funny.jpg" alt="little boy browsing">
-                            <img src="images/photo1.jpg" alt="Nakov igrae kiuchek">
+                            <img src="images/Thisissparta.png" alt="During the Java exam">
                             <script>
                             Galleria.loadTheme('themes/classic/galleria.classic.min.js');
                             Galleria.run('.galleria');
