active about us

--- a/aboutus.html
+++ b/aboutus.html
@@ -33,7 +33,7 @@
                             <a href="jokes.html">Jokes</a>
                         </div>
                         <div class="col-sm-4 col-md-2 col-xs-6 navitem">
-                            <a href="aboutus.html">About Us</a>
+                            <a href="aboutus.html" class="active">About Us</a>
                         </div>
                     </nav>
                 </div>
