audio and other small changes

--- a/pictures.html
+++ b/pictures.html
@@ -27,13 +27,13 @@
                             <a href="video.html">Video</a>
                         </div>
                         <div class="col-sm-4 col-md-2 col-xs-6 navitem">
-                            <a href="#">Audio</a>
+                            <a href="audio.html">Audio</a>
                         </div>
                         <div class="col-sm-4 col-md-2 col-xs-6 navitem">
                             <a href="jokes.html">Jokes</a>
                         </div>
                         <div class="col-sm-4 col-md-2 col-xs-6 navitem">
-                            <a href="#">About Us</a>
+                            <a href="aboutus.html">About Us</a>
                         </div>
                     </nav>
                 </div>
