--- a/audio.html
+++ b/audio.html
@@ -18,7 +18,7 @@
                 <div class="row">
                     <nav>
                         <div class="col-sm-4 col-md-2 col-xs-6 navitem">
-                            <a href="index.html" class="active">Home</a>
+                            <a href="index.html">Home</a>
                         </div>
                         <div class="col-sm-4 col-md-2 col-xs-6 navitem">
                             <a href="pictures.html">Pictures</a>
@@ -33,7 +33,7 @@
                             <a href="jokes.html">Jokes</a>
                         </div>
                         <div class="col-sm-4 col-md-2 col-xs-6 navitem">
-                            <a href="aboutus.html">About Us</a>
+                            <a href="aboutus.html" class="active">About Us</a>
                         </div>
                     </nav>
                 </div>
@@ -42,11 +42,22 @@
             <div class="row">
                 <main>
                 <div class="col-md-8">
-                    <section>
-                        <h1>Добре дошли</h1>
-                        <p class="sentences">В нашият сайт ще видите забавни снимки, вицове, видео и аудио ремикси за нашите лектори.</p>
-                        <p class="sentences"><strong>Бог създаде идиотите. Интернет ги направи равни.</strong></p>
-                    </section>
+                   <audio controls>
+                      <source src="horse.mp3" type="audio/mpeg">
+                      <source src="horse.ogg" type="audio/ogg">
+                    </audio>
+                    <audio controls>
+                      <source src="horse.mp3" type="audio/mpeg">
+                      <source src="horse.ogg" type="audio/ogg">
+                    </audio>
+                        <audio controls>
+                      <source src="horse.mp3" type="audio/mpeg">
+                      <source src="horse.ogg" type="audio/ogg">
+                    </audio>
+                        <audio controls>
+                      <source src="horse.mp3" type="audio/mpeg">
+                      <source src="horse.ogg" type="audio/ogg">
+                    </audio>
                 </div>
                 </main>
                 <div class="col-md-4">
