--- a/jokes.html
+++ b/jokes.html
@@ -27,7 +27,7 @@
                             <a href="video.html">Video</a>
                         </div>
                         <div class="col-sm-4 col-md-2 col-xs-6 navitem">
-                            <a href="#">Audio</a>
+                            <a href="audio.html">Audio</a>
                         </div>
                         <div class="col-sm-4 col-md-2 col-xs-6 navitem">
                             <a href="jokes.html" class="active">Jokes</a>
