--- a/video.html
+++ b/video.html
@@ -28,7 +28,7 @@
                             <a href="video.html" class="active">Video</a>
                         </div>
                         <div class="col-sm-4 col-md-2 col-xs-6 navitem">
-                            <a href="#">Audio</a>
+                            <a href="audio.html">Audio</a>
                         </div>
                         <div class="col-sm-4 col-md-2 col-xs-6 navitem">
                             <a href="jokes.html">Jokes</a>
