--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <div id="wrapper">
             <header>
-                <img src="images/headerblue.png" alt="header image" />
+                <img src="images/headerbluesecond.png" alt="header image" />
                 
                 <div class="row">
                     <nav>
