--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 <div class="col-md-8">
                     <section>
                         <h1>Добре дошли</h1>
+                        <h2>&lt;team DEATHWING&gt;</h2>
                         <p class="sentences">В нашият сайт ще видите забавни снимки, вицове, видео и аудио ремикси за нашите лектори.</p>
                         <p class="sentences"><strong>Бог създаде идиотите. Интернет ги направи равни.</strong></p>
                     </section>
