--- a/video.html
+++ b/video.html
@@ -47,23 +47,23 @@
                         <section class="youtube-video">
                             <div class="col-sm-6">
                                 <iframe title="YouTube video player" class="youtube-player" type="text/html"
-                                width="345" height="250" src="http://www.youtube.com/embed/W-Q7RMpINVo"
-                                frameborder="0" allowFullScreen></iframe>
+                                width="345" height="250" src="https://www.youtube.com/embed/6ThA5T5Z4xQ"
+                                frameborder="1" allowFullScreen></iframe>
                             </div>
                             <div class="col-sm-6">
                                 <iframe title="YouTube video player" class="youtube-player" type="text/html"
-                                width="345" height="250" src="http://www.youtube.com/embed/W-Q7RMpINVo"
-                                frameborder="0" allowFullScreen></iframe>
+                                width="345" height="250" src="https://www.youtube.com/embed/1zPcf86tD1U"
+                                frameborder="1" allowFullScreen></iframe>
                             </div>
                             <div class="col-sm-6">
                                 <iframe title="YouTube video player" class="youtube-player" type="text/html"
-                                width="345" height="250" src="http://www.youtube.com/embed/W-Q7RMpINVo"
-                                frameborder="0" allowFullScreen></iframe>
+                                width="345" height="250" src="https://www.youtube.com/embed/I5i-LupFIvc"
+                                frameborder="1" allowFullScreen></iframe>
                             </div>
                             <div class="col-sm-6">
                                 <iframe title="YouTube video player" class="youtube-player" type="text/html"
-                                width="345" height="250" src="http://www.youtube.com/embed/W-Q7RMpINVo"
-                                frameborder="0" allowFullScreen></iframe>
+                                width="345" height="250" src="https://www.youtube.com/embed/vqp5vy87D1w"
+                                frameborder="1" allowFullScreen></iframe>
                             </div>
                         </section>
                     </div>
