--- a/FootbalUni/audio.html
+++ b/FootbalUni/audio.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>FootballUni</title>
+        <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -10,8 +11,9 @@
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
     </head>
     <body>
-        <header>
-        <div class="color-header">
+                <header>
+        <div class="row">
+            <div class="color-header">
             <img src="images/logo.png">
             </div>
             <div class="row">
@@ -51,36 +53,50 @@
                 </div>
             </div>
         </header>
-        <hr>
-        <div class="row">
-            <main>
-            <div class="col-md-8">
-                <section class="content">
-                    <h1>Добре дошли</h1>
-                    <h2>&lt;team DEATHWING&gt;</h2>
-                    <p class="sentences">В нашият сайт ще видите забавни снимки, вицове,<br> видео и аудио ремикси за нашите лектори.</p>
-                    <p class="sentences"><strong>Бог създаде идиотите.<br> Интернет ги направи равни.</strong></p>
+                    <hr>
+            <div class="row">
+                <main>
+                <div class="col-md-8">
+                <section>
+                  <div class="content">
+                   <h1>Химна на Software University</h1>
+                    <audio controls>
+                  <source src="audio/mime.mp3" type="audio/ogg">
+                  <source src="audio/mime.mp3" type="audio/mpeg">
+                </audio>
+                   <h1>Химна на СП в Бразилия</h1>
+                    <audio controls>
+                  <source src="audio/weareone.mp3" type="audio/ogg">
+                  <source src="audio/weareone.mp3" type="audio/mpeg">
+                </audio>
+                     <h1>Химна на СП в Южна Аврика</h1>
+                    <audio controls>
+                  <source src="audio/wakawaka.mp3" type="audio/ogg">
+                  <source src="audio/wakawaka.mp3" type="audio/mpeg">
+                </audio>
+                <h2>Всеки знае, вторият и третият не струват пред<br> химна на Software University ?</h2>
+                </div>
                 </section>
+                </div>
+                </main>
+                <div class="col-md-4">
+                    <aside>
+                        <script type="text/javascript" src="js/calendar.js"></script>
+                        
+                        <ul class="social-icons">
+                            <li class="twitter">
+                                <a title="Twitter" target="_blank" href="https://twitter.com/softunibg"><img alt="Twitter" src="images/twitter.png"></a>
+                            </li>
+                            <li class="fb">
+                                <a title="Facebook" target="_blank" href="https://www.facebook.com/SoftwareUniversity"><img alt="Facebook" src="images/facebook.png"></a>
+                            </li>
+                            <li class="googleplus">
+                                <a title="Google Plus" target="_blank" href="https://plus.google.com/+SoftuniBg"><img alt="Google Plus" src="images/googleplus.png"></a>
+                            </li>
+                        </ul>
+                    </aside>
+                </div>
             </div>
-            </main>
-            <div class="col-md-4">
-                <aside>
-                    <script type="text/javascript" src="js/calendar.js"></script>
-                    
-                    <ul class="social-icons">
-                        <li class="twitter">
-                            <a title="Twitter" target="_blank" href="https://twitter.com/softunibg"><img alt="Twitter" src="images/twitter.png"></a>
-                        </li>
-                        <li class="fb">
-                            <a title="Facebook" target="_blank" href="https://www.facebook.com/SoftwareUniversity"><img alt="Facebook" src="images/facebook.png"></a>
-                        </li>
-                        <li class="googleplus">
-                            <a title="Google Plus" target="_blank" href="https://plus.google.com/+SoftuniBg"><img alt="Google Plus" src="images/googleplus.png"></a>
-                        </li>
-                    </ul>
-                </aside>
-            </div>
-        </div>
         <footer>
            <div class="color-footer">
             <p class="team">2014-All rights reserved team DEATHWING  &copy;<br>
