--- a/FootbalUni/galeriq.html
+++ b/FootbalUni/galeriq.html
@@ -3,14 +3,16 @@
     <head>
         <meta charset="utf-8">
         <title>FootballUni</title>
+        <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <script type="text/javascript" src="js/jquery-2.1.1.js"></script>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="js/galleria-1.3.6.min.js"></script>
     </head>
     <body>
-        <header>
+                <header>
         <div class="color-header">
             <img src="images/logo.png">
             </div>
@@ -51,37 +53,44 @@
                 </div>
             </div>
         </header>
-        <hr>
-        <div class="row">
-            <main>
-            <div class="col-md-8">
-                <section class="content">
-                    <h1>Добре дошли</h1>
-                    <h2>&lt;team DEATHWING&gt;</h2>
-                    <p class="sentences">В нашият сайт ще видите забавни снимки, вицове,<br> видео и аудио ремикси за нашите лектори.</p>
-                    <p class="sentences"><strong>Бог създаде идиотите.<br> Интернет ги направи равни.</strong></p>
-                </section>
+                    <hr>
+            <div class="row">
+
+                                    <main>
+                <div class="col-md-8">
+                    <section>
+                        <h2>Галерия</h2>
+                        <div class="galleria">
+                            <img src="images/photo1.jpg" alt="Nakov igrae kiuchek">
+                            <img src="images/funny.jpg" alt="little boy browsing">
+                            <img src="images/Thisissparta.png" alt="During the Java exam">
+                            <script>
+                            Galleria.loadTheme('themes/classic/galleria.classic.min.js');
+                            Galleria.run('.galleria');
+                            </script>
+                        </div>
+                    </section>
+                </div>
+                </main>
+                <div class="col-md-4">
+                    <aside>
+                        <script type="text/javascript" src="js/calendar.js"></script>
+                        
+                        <ul class="social-icons">
+                            <li class="twitter">
+                                <a title="Twitter" target="_blank" href="https://twitter.com/softunibg"><img alt="Twitter" src="images/twitter.png"></a>
+                            </li>
+                            <li class="fb">
+                                <a title="Facebook" target="_blank" href="https://www.facebook.com/SoftwareUniversity"><img alt="Facebook" src="images/facebook.png"></a>
+                            </li>
+                            <li class="googleplus">
+                                <a title="Google Plus" target="_blank" href="https://plus.google.com/+SoftuniBg"><img alt="Google Plus" src="images/googleplus.png"></a>
+                            </li>
+                        </ul>
+                    </aside>
+                </div>
             </div>
-            </main>
-            <div class="col-md-4">
-                <aside>
-                    <script type="text/javascript" src="js/calendar.js"></script>
-                    
-                    <ul class="social-icons">
-                        <li class="twitter">
-                            <a title="Twitter" target="_blank" href="https://twitter.com/softunibg"><img alt="Twitter" src="images/twitter.png"></a>
-                        </li>
-                        <li class="fb">
-                            <a title="Facebook" target="_blank" href="https://www.facebook.com/SoftwareUniversity"><img alt="Facebook" src="images/facebook.png"></a>
-                        </li>
-                        <li class="googleplus">
-                            <a title="Google Plus" target="_blank" href="https://plus.google.com/+SoftuniBg"><img alt="Google Plus" src="images/googleplus.png"></a>
-                        </li>
-                    </ul>
-                </aside>
-            </div>
-        </div>
-        <footer>
+       <footer>
            <div class="color-footer">
             <p class="team">2014-All rights reserved team DEATHWING  &copy;<br>
             Contact information: <a href="mailto:deathwing@gmail.com">deathwing@gmail.com</a>
