--- a/FootbalUni/galeriq.html
+++ b/FootbalUni/galeriq.html
@@ -65,7 +65,7 @@
                             <img src="images/funny.jpg" alt="little boy browsing">
                             <img src="images/Thisissparta.png" alt="During the Java exam">
                             <script>
-                            Galleria.loadTheme('themes/classic/galleria.classic.min.js');
+                            Galleria.loadTheme('galleria-themes/classic/galleria.classic.min.js');
                             Galleria.run('.galleria');
                             </script>
                         </div>
