--- a/FootbalUni/nacionali.html
+++ b/FootbalUni/nacionali.html
@@ -12,11 +12,10 @@
     </head>
     <body>
         <header>
-        <div class="color-header">
-            <img src="images/logo.png">
+            <div class="color-header">
+                <img src="images/logo.png">
             </div>
             <div class="row">
-            <div id="center">
                 <nav>
                     <div class="col-sm-4 col-md-2 col-xs-6">
                         <div class="navitem">
@@ -47,59 +46,65 @@
                         <div class="navitem">
                             <a href="aboutus.html">About Us</a>
                         </div>
-                    </div>
-                </nav>
+                    </nav>
                 </div>
             </div>
         </header>
-                    <hr>
+        <hr>
             <div class="row">
-                <main>
-                <div class="col-md-8">
-                <section>
-                    <article>
-                        <header id="national">Светлиньо</header>
-                <div><dl>
-                        <dt><img src="images/svetlinio%20copy.png" width="100px" weight="100px">Светлиньо е капитан на националния отбор на Software University от самото му създаване.Най-голямото му качество е да се напие и така става най-голямата заплаха за противниковата защита.Има силен десен крак както и много груби шпагати.</dt></div>
-                        </dl>
-                <footer>
-                <div id="otbor">
-                Клубен отбор: ФК “ДИВ ПРЪЧ” с.Камена !!!
+                <div class="col-md-9">
+                    <main>
+                    <section>
+                        <div class="col-sm-6">
+                            <article>
+                                <dl>
+                                    <dt>Светлиньо</dt>
+                                    <dd><img src="images/svetlinio%20copy.png">Светлиньо е капитан на националния отбор на Software University от самото му създаване.Най-голямото му качество е да се напие и така става най-голямата заплаха за противниковата защита.Има силен десен крак както и много груби шпагати.</dd>
+                                </dl>
+                                <div id="otbor">
+                                    Клубен отбор: ФК “ДИВ ПРЪЧ” с.Камена !!!
+                                </div>
+                            </article>
+                        </div>
+                        <div class="col-sm-6">
+                            <article>
+                                <dl>
+                                    <dt>Тединьо</dt>
+                                    <dd><img src="images/tedinio%20copy.png">Тединьо е незаменим титуляр в отбора на Software University. Той е централен халф и най-силното му качество е да задържа топката, а след това да даде голов пас на Светлиньо.Много често си изкарва глупави картони, защото обича да псува, а когато напсуваш съдия става лошо...</dd>
+                                </dl>
+                                <div id="otbor">
+                                    Клубен отбор: ФК “ОСТЪР НОЖ” с.Раданово, обл. Велико Търново !!!
+                                </div>
+                            </article>
+                        </div>
+                        <div class="col-sm-6">
+                            <article>
+                                <dl>
+                                    <dt>Владиньо</dt>
+                                    <dd><img src="images/vladinio%20copy.png">Владиньо е централен защитник и се слави като един от най-големите таланти в световния футбол.Той също е незаменим титуляр.Наскоро се появи слух, че от Полски Тръмбеж са предложили 100 млн. паунда за неговите услуги, но треньорката им- Бруна Гроздарска е отказала офертата, защото и се сторила скромна.</dd>
+                                </dl>
+                                <div id="otbor">
+                                    Клубен отбор: ФК “УЖАС” с. Зетьово!!!
+                                </div>
+                            </article>
+                        </div>
+                        <div class="col-sm-6">
+                            <article>
+                                <dl>
+                                    <dt>Владиньо Джуниър</dt>
+                                    <dd><img src="images/djuniar%20copy.png">Владиньо Джуниър остава на заден план заради останлите трима, но той играе не важна част от националния отбот на Software University.Неговото най-силно качество е да гърдира топката, а играта му във въздуха везхитява всички.</dd>
+                                </dl>
+                                <div id="otbor">
+                                    Клубен отбор: ФК “”ДИВА СВИНЯ” с. Цонево !!!
+                                </div>
+                            </article>
+                        </div>
+                    </section>
+                    </main>
                 </div>
-                   </footer>                
-                    </article>
-                    <article>
-                <header id="national">Тединьо</header>
-                <div><dl><dt><img src="images/tedinio%20copy.png" width="100px" weight="100px">Тединьо е незаменим титуляр в отбора на Software University. Той е централен халф и най-силното му качество е да задържа топката, а след това да даде голов пас на Светлиньо.Много често си изкарва глупави картони, защото обича да псува, а когато напсуваш съдия става лошо...
-                </dt>
-                </dl>
-                </div>
-                <footer id="otbor">
-                Клубен отбор: ФК “ОСТЪР НОЖ” с.Раданово, обл. Велико Търново !!!
-            </footer> 
-                    </article>
-                    <article>
-                       <header id="national">Владиньо</header>
-                <div><dl><dt><img src="images/vladinio%20copy.png" width="100px" weight="100px">Владиньо е централен защитник и се слави като един от най-големите таланти в световния футбол.Той също е незаменим титуляр.Наскоро се появи слух, че от Полски Тръмбеж са предложили 100 млн. паунда за неговите услуги, но треньорката им- Бруна Гроздарска е отказала офертата, защото и се сторила скромна. </dt></dl></div>
-                <footer id="otbor">
-                Клубен отбор: ФК “УЖАС” с. Зетьово!!!
-            </footer> 
-                    </article>
-                    <article>
-                       <header id="national">Владиньо Джуниър</header>
-                <div><dl><dt><img src="images/djuniar%20copy.png" width="100px" weight="100px">Владиньо Джуниър остава на заден план заради останлите трима, но той играе не важна част от националния отбот на Software University.Неговото най-силно качество е да гърдира топката, а играта му във въздуха везхитява всички.</dt></dl></div>
-                <footer id="otbor">
-                Клубен отбор: ФК “”ДИВА СВИНЯ” с. Цонево !!!
-            </footer>  
-                    </article>
-
-                </section>
-                </div>
-                </main>
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <aside>
                         <script type="text/javascript" src="js/calendar.js"></script>
-                        
                         <ul class="social-icons">
                             <li class="twitter">
                                 <a title="Twitter" target="_blank" href="https://twitter.com/softunibg"><img alt="Twitter" src="images/twitter.png"></a>
@@ -113,12 +118,12 @@
                         </ul>
                     </aside>
                 </div>
-            </div>
+        </div>
         <footer>
-           <div class="color-footer">
-            <p class="team">2014-All rights reserved team DEATHWING  &copy;<br>
-            Contact information: <a href="mailto:deathwing@gmail.com">deathwing@gmail.com</a>
-            </p>
+            <div class="color-footer">
+                <p class="team">2014-All rights reserved team DEATHWING  &copy;<br>
+                Contact information: <a href="mailto:deathwing@gmail.com">deathwing@gmail.com</a>
+                </p>
             </div>
         </footer>
     </body>
